--- a/ui/narrative/methods/run_Amplicon_Matrix_Subsetting_App/display.yaml
+++ b/ui/narrative/methods/run_Amplicon_Matrix_Subsetting_App/display.yaml
@@ -32,24 +32,24 @@ parameters :
         long-hint: |
             AmpliconMatrix
 
-        attribute_mapping_obj_ref:
-            ui-name: |
-                Metadata AttributeMapping
-            short-hint: |
-                AttributeMapping where metadata for grouping is stored.
-            long-hint: |
-                AttributeMapping where metadata for grouping is stored.
+    attribute_mapping_obj_ref:
+        ui-name: |
+            Metadata AttributeMapping
+        short-hint: |
+            AttributeMapping where metadata for grouping is stored.
+        long-hint: |
+            AttributeMapping where metadata for grouping is stored.
 
-        subset_field:
-            ui-name: |
-                Metadata Subsetting Column Name
-            short-hint: |
-                Name of the column in AttributeMapping metadata in which to subset by
-            long-hint: |
-                Name of the column in AttributeMapping metadata in which to subset by.
+    meta_group:
+        ui-name: |
+            Metadata Subsetting
+        short-hint: |
+            Name of the column in AttributeMapping metadata in which to subset by
+        long-hint: |
+            Name of the column in AttributeMapping metadata in which to subset by.
 
 parameter-groups :
-    grouping_label:
+    subset_field:
         ui-name : Subset Field
         short-hint :  Select an attribute for breaking AmpliconMatrix into smaller subset matrices
 
